# utoolbox-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md
example/: CMakeLists.txt  main.cpp
include/ut/core/: abstractdelegate.h  abstractevent.h  abstractwrapper.h  delegate.h  event.h  eventdispatcher.cpp  eventdispatcher.h  eventloop.cpp  eventloop.h  functionwrapper.h  lambdawrapper.h  methodwrapper.h  object.cpp  object.h  task.h
tests/: CMakeLists.txt  functiondelegatecall.cpp  lambdadelegatecall.cpp  methoddelegatecall.cpp  removedlambdacall.cpp  removedmethodcall.cpp  removedmethodcallv2.cpp
